# matsuzawa-20260120-2

./: pyproject.toml
.research/: research_history.json
config/: config.yaml
config/runs/: comparative-1-vit-b16-imagenet1k-fs.yaml  proposed-vit-b16-imagenet1k-fs.yaml
src/: evaluate.py  main.py  model.py  preprocess.py  train.py
