[project]
name = "ccfd-aug"
version = "0.4.0"
description = "Class-Conditional Feature Diffusion Augmentation experiments"
requires-python = ">=3.9"

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "timm>=0.9.12",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "hydra-core>=1.3.2",
    "wandb>=0.15.0",
    "optuna>=3.2.0",
    "seaborn>=0.13.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "omegaconf>=2.3.0",
]

[tool.setuptools.package-data]
"*" = ["*.yaml"]
